--- a/shared.css
+++ b/shared.css
@@ -20,16 +20,17 @@ body {
     font-family: var(--main-ff);
     margin: 0;
     display: grid;
-    grid-template-rows: 5rem auto fit-content(8rem);
+    grid-template-rows: auto 1fr auto;
     grid-template-areas: "header"
                          "main"
                          "footer";
-    height: 100%;
+    height: 100vh;
 }
 
 main {
     grid-area: main;
     margin-top: 0;
+    overflow: auto;
 }
 
 .main-header {
