--- a/shared.css
+++ b/shared.css
@@ -2,10 +2,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Armata&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
+/* Apply responsivness, make sure that the page look good on the following media queries:
+
+- Mobile - 375px
+- Tablet - 768px = 48rem
+- Desktop - 1200px  = 75rem */
+
 :root {
     --sumondo-orange: #dbc923;
     --background-blue: #2ea2cc;
     --main-ff: 'Poppins', sans-serif;
+    --nav-color: #555555;
 }
 
 * {
@@ -16,9 +23,25 @@ html {
     height: 100%;
 }
 
+.backdrop {
+    position: fixed;
+    display: none;
+    opacity: 0;
+    transition: opacity 0.2s linear;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+}
+
 body {
     font-family: var(--main-ff);
     margin: 0;
+}
+
+#app {
     display: grid;
     grid-template-rows: auto 1fr auto;
     grid-template-areas: "header"
@@ -27,23 +50,21 @@ body {
     height: 100vh;
 }
 
-main {
+#app main {
     grid-area: main;
     margin-top: 0;
     overflow: auto;
 }
 
-.main-header {
+#app .main-header {
     grid-area: header;
     width: 100%;
-    padding: 0.5rem 1rem;
+    /* padding: 0.5rem 1rem; */
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    z-index: 2;
+    
     transition: all 0.3s linear;
 }
 
@@ -51,9 +72,24 @@ main {
     background: white;
 }
 
-.logo-container a {
-    padding: 1rem;
+.main-header-container {
+    padding: 1.25rem 1rem;
 }
+
+.top-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 40;
+}
+
+.logo-container {
+    padding: 0 1rem;
+}
+
+/* .logo-container a {
+    padding: 1rem;
+} */
 
 .main-header-brand img {
     height: 3.75rem;
@@ -62,7 +98,7 @@ main {
 .nav-lang-cart {
     display: flex;
     align-items: center;
-    
+    padding: 0 1rem;
 }
 
 .main-nav {
@@ -83,7 +119,6 @@ main {
 
 .lang-buttons {
     margin-left: 1rem;
-    
 }
 
 .main-nav-item button {
@@ -108,6 +143,7 @@ main {
     border: none;
     color: white;
     cursor: pointer;
+    padding: 0 1.5rem;
 }
 
 .shopping-cart-btn {
@@ -127,31 +163,45 @@ main {
     left: -0.5rem;
 }
 
-.mobile-nav {
-    width: 80%;
-    background: white;
-    height: 100vh;
+/* .backdrop {
     position: fixed;
+    display: block;
+    opacity: 0;
+    transition: opacity 0.2s linear;
     top: 0;
     left: 0;
-    z-index: 101;
-    transform: translateX(-100%);
-    transition: transform 0.2s ease-out;
-    padding: 0 3rem 1rem 3rem;
+    z-index: 1;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+} */
+
+.mobile-nav {
+    background: white;
+    width: 100%;
+    transform: translateY(-150%);
+    transition: transform 0.4s ease-out;
+    z-index: 3;
 }
 
-.mobile-logo-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.close-mobile-nav {
+    background: none;
+    border: none;
+    padding: 0 1.5rem;
+    cursor: pointer;
+    color: white;
+    display: none;
+    /* color: #1aabec; */
 }
 
-.mobile-nav-logo {
-    margin: 1rem 1rem 1rem 0;
+.open {
+    transform: translateY(0);
+    display: block;
+    opacity: 1;
 }
 
-.mobile-nav-logo img {
-    height: 4rem;
+.close {
+    display: none;
 }
 
 .cart-and-close-container {
@@ -159,42 +209,55 @@ main {
     align-items: center;
 }
 
-.close-mobile-nav {
-    background: none;
-    border: none;
-    margin: 1rem;
-    cursor: pointer;
-    color: #1aabec;
-}
-
 .mobile-nav-items {
     list-style: none;
     display: flex;
     flex-direction: column;
-    padding: 0;
+    padding: 0.5rem 0 0 0;
+    margin: 0 2rem;
 }
 
 .mobile-nav-item {
     padding: 0.5rem;
-    border-bottom: solid 1px #555555;
+    border-bottom: solid 1px #e0e0e0;
+}
+
+.mobile-nav-item:last-of-type {
+    border-bottom: none;
 }
 
 .mobile-nav-item a {
     text-decoration: none;
-    color: #555555;
+    color: var(--nav-color);
     font-size: 1rem;
+}
+
+.mobile-nav-lang-buttons {
+    margin: 0 2.5rem;
 }
 
 .mobile-lang-button {
     background-color: var(--sumondo-orange);
-    color: white;
+    color: var(--nav-color);
     border-radius: 50%;
     border: none;
-    padding: 0.5rem;
-    margin: 0.5rem 0.5rem 0.5rem 0;
+    padding: 0.62rem;
+    margin: 0.62rem 0.4rem 0.62rem 0;
 }
 
-@media (min-width: 60rem) {
+#app .main-footer {
+    background: black;
+    grid-area: footer;
+    margin-top: 2rem;
+}
+
+.main-footer ul {
+    color: white;
+}
+
+
+
+@media (min-width: 48rem) {
     .main-nav {
         display: flex;
         align-items: center;
@@ -205,31 +268,13 @@ main {
     }
 }
 
-.main-footer {
-    background: black;
-    grid-area: footer;
-    margin-top: 2rem;
-}
-
-.main-footer ul {
-    color: white;
-}
-
-.backdrop {
-    position: fixed;
-    display: none;
-    opacity: 0;
-    transition: opacity 0.2s linear;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
-}
-
-.open {
-    transform: translateY(0);
-    display: block;
-    opacity: 1;
+@media (min-width: 75rem) {
+    .main-nav {
+        display: flex;
+        align-items: center;
+        margin-right: 2rem;
+    }
+    .hamburger-menu {
+        display: none;
+    }
 }
