--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 .slider {
     background: url(images/background-image-home.png) center/cover no-repeat border-box, #ff1b68;
     width: 100%;
-    height: 50vh;
     position: relative;
+    height: 100vh;
 }
 
 .slider-container {
     width: 100%;
-    height: 70vh;
+    height: 100vh;
     padding: 0 1rem;
     position: relative;
     /* top: 10rem; */
@@ -40,7 +40,7 @@
 }
 
 .choose-option-buttons button {
-    margin: 1.5rem;
+    margin: 0 0 0 1.5rem;
     padding: 0.8rem 3rem;
     border-radius: 3rem;
     color: #177091;
