--- a/shared.css
+++ b/shared.css
@@ -91,6 +91,11 @@ body {
     padding: 1rem;
 } */
 
+.rest-container {
+    display: flex;
+    align-items: center;
+}
+
 .main-header-brand img {
     height: 3.75rem;
 }
@@ -133,8 +138,34 @@ body {
     margin: 0.3rem;
 }
 
-.shopping-cart-info-box {
-    display: none;
+.rest-container .cart {
+    position: relative;
+    margin-right: 2rem;
+}
+
+.rest-container .cart button{
+    background: none;
+    border: none;
+    color: #177091;
+}
+
+.rest-container .cart button:hover{
+    cursor: pointer;
+}
+
+.rest-container .cart-span{
+    position: absolute;
+    top: -0.3rem;
+    right: -0.7rem;
+    width: 1.2rem;
+    height: 1.2rem;
+    background: #177091;
+    color: white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
 }
 
 .hamburger-menu {
@@ -143,12 +174,6 @@ body {
     color: white;
     cursor: pointer;
     padding: 0 1.5rem;
-}
-
-.shopping-cart-btn {
-    background: none;
-    border: none;
-    color: #177091;
 }
 
 .badge {
@@ -161,19 +186,6 @@ body {
     top: -1rem;
     left: -0.5rem;
 }
-
-/* .backdrop {
-    position: fixed;
-    display: block;
-    opacity: 0;
-    transition: opacity 0.2s linear;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
-} */
 
 .mobile-nav {
     background: white;
@@ -256,7 +268,7 @@ body {
 
 
 
-@media (min-width: 48rem) {
+@media (min-width: 55rem) {
     .main-nav {
         display: flex;
         align-items: center;
