--- a/website/shared.css
+++ b/website/shared.css
@@ -4,9 +4,17 @@
 
 /* Apply responsivness, make sure that the page look good on the following media queries:
 
-- Mobile - 375px
-- Tablet - 768px = 48rem
-- Desktop - 1200px  = 75rem */
+- Mobile - 375px - fs = 1rem
+- Tablet - 768px = 48rem - fs = 1.2rem
+- Desktop - 1200px  = 75rem - fs = 1.5rem */
+
+/* Default font sizes
+h1 = 2rem
+h2 = 1.5rem
+h3 = 1.2rem
+h4 = 1rem
+h5 = 0.8rem
+h6 = 0.7rem */
 
 :root {
     --sumondo-orange: #dbc923;
@@ -48,7 +56,6 @@ body {
     grid-template-areas: "header"
                          "main"
                          "footer";
-    /* height: 100vh; */
 }
 
 #app main {
@@ -67,16 +74,12 @@ body {
     transition: all 0.3s linear;
 }
 
-/* .scrolled {
-    background: white;
-} */
-
 .top-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     z-index: 40;
-    padding: 1.25rem 3rem 1rem 1rem;
+    padding: 1.25rem 1rem 1rem 1rem;
 }
 
 .logo-container {
@@ -128,6 +131,7 @@ body {
 .rest-container .cart {
     position: relative;
     margin-right: 2rem;
+    display: none;
 }
 
 .rest-container .cart button{
@@ -241,7 +245,7 @@ body {
     border: none;
     color: white;
     cursor: pointer;
-    padding: 0 1.5rem;
+    padding: 0 1rem;
 }
 
 .badge {
@@ -328,11 +332,31 @@ body {
     background: var(--change-el-color);
     grid-area: footer;
     margin-top: 2rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-footer .footer-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-footer .footer-menu-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .main-footer ul {
     color: white;
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
 }
 
 .main-footer li {
@@ -346,6 +370,35 @@ body {
 .main-footer a {
     color: var(--sumondo-orange);
     text-decoration: none;
+    padding: 1rem;
+    margin: 0.5rem;
+}
+
+.main-footer .footer-copyright {
+    width: 100%;
+    border-top: 1px solid #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.top-header.scrolled {
+    background: white;
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 20%);
+}
+
+.top-header.scrolled a {
+    color: black
+}
+
+.top-header.scrolled .hamburger-menu {
+    color: var(--change-el-color)
+}
+
+@media (min-width: 48rem) {
+    .rest-container .cart {
+        display: block;
+    }
 }
 
 @media (min-width: 55rem) {
@@ -368,25 +421,4 @@ body {
     .hamburger-menu {
         display: none;
     }
-}
-
-/* .main-nav-item a.scrolled-font-color {
-    color: black;
-}
-
-.hamburger-menu.scrolled {
-    color: var(--change-el-color);
-} */
-
-.top-header.scrolled {
-    background: white;
-    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 20%);
-}
-
-.top-header.scrolled a {
-    color: black
-}
-
-.top-header.scrolled .hamburger-menu {
-    color: var(--change-el-color)
 }
